force-app/main/default/objects/cgcloud__Fund__c/cgcloud__Fund__c.object-meta.xml
<CustomObject>
    <description>A fund is the amount of money given to an employee for a special reason during a specific business period. This money is used to pay special activities like promotion campaigns.</description>
    <label>Fund</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>