force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>cgcloud__Fund_Transaction_Row__c.cgcloud__Amount__c</summarizedField>
    <summaryForeignKey>cgcloud__Fund_Transaction_Row__c.cgcloud__Target_Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>