force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Anchor_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anchor Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>