force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Available_to_Plan__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Available_to_Plan__c</fullName>
    <description>Represents the sum of the Pending Budget amount minus the Spending (Pending) amount</description>
    <formula>cgcloud__Pending_Budget__c  +  cgcloud__Current_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>