force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Commitments_Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Commitments_Total__c</fullName>
    <formula>cgcloud__Spending_Committed__c +  cgcloud__LE_Spend_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitments (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>