force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Current_Balance__c</fullName>
    <description>Represents the sum of the Credit/Debit Balance (Approved) amount plus the Actual RBF amount</description>
    <formula>cgcloud__Total_Credits_Approved_Earned__c  -  cgcloud__Total_Debits_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>