force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Current_Budget__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Current_Budget__c</fullName>
    <description>Represents the sum of the Current Balance amount plus the Actual RBF amount</description>
    <formula>cgcloud__Current_Balance__c  -  cgcloud__Spending_Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>