force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Deposits_Approved__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Deposits_Approved__c</fullName>
    <description>This field rolls up Fund transaction Rows where transaction type = &quot;Deposit&quot;</description>
    <label>Deposits (Approved)</label>
    <summarizedField>cgcloud__Fund_Transaction_Row__c.cgcloud__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Fund_Transaction_Row__c.cgcloud__Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Fund_Transaction_Row__c.cgcloud__Target_Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>