force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Deposits_Pending__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Deposits_Pending__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field rolls up pending fund transactions ( where Target funds are credited ) and sums up Deposits approved amount</description>
    <label>Deposits (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>