force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Deposits_Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Deposits_Total__c</fullName>
    <formula>cgcloud__Deposits_Approved__c +  cgcloud__Deposits_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposits (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>