force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Description_Language_4__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Language_4__c</fullName>
    <description>Holds language 4 description.</description>
    <label>Description Language 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>