force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Fixed_Based_Overdraw__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fixed_Based_Overdraw__c</fullName>
    <description>this field is to make following calculation:  Deposits (Approved) * (Fixed-Based Overdraw Allowance/ 100)</description>
    <label>Fixed-Based Overdraw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>