force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Template</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>cgcloud__Fund_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>