force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Fund_Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template_Description__c</fullName>
    <formula>cgcloud__Fund_Template__r.cgcloud__Description__c</formula>
    <label>Fund Template Description</label>
    <type>Text</type>
</CustomField>