force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Invoice_Based_Costs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Invoice_Based_Costs__c</fullName>
    <description>Sum of Tactic_Fund.OI_Costs_c of records whose Phase equals Committed</description>
    <label>Invoice Based Costs</label>
    <summarizedField>cgcloud__Tactic_Fund__c.cgcloud__OI_Costs__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Tactic_Fund__c.cgcloud__Phase__c</field>
        <operation>equals</operation>
        <value>Committed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cgcloud__Tactic_Fund__c.cgcloud__Active_Tactic__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Tactic_Fund__c.cgcloud__Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>