force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__LE_RBF__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_RBF__c</fullName>
    <description>Total LE RBF calculated from Fund Grid</description>
    <label>LE RBF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>