force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__LE_Spend_Approved__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Spend_Approved__c</fullName>
    <description>Sum of Tactic_Fund.LE_Spend__c of records whose Phase equals Committed</description>
    <label>LE Spend (Approved)</label>
    <summarizedField>cgcloud__Tactic_Fund__c.cgcloud__LE_Spend__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Tactic_Fund__c.cgcloud__Phase__c</field>
        <operation>equals</operation>
        <value>Committed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cgcloud__Tactic_Fund__c.cgcloud__Active_Tactic__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Tactic_Fund__c.cgcloud__Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>