force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__LE_Spend_Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Spend_Total__c</fullName>
    <formula>cgcloud__LE_Spend_Approved__c + cgcloud__LE_Spend_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LE Spend (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>