force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__LE_Volume__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Volume__c</fullName>
    <description>Total LE Volume calculated from Fund Grid</description>
    <label>LE Volume</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>