force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Liabilities_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Liabilities_Unpaid__c</fullName>
    <description>Liabilities_Accrued__c minus Payments_Approved__c</description>
    <formula>cgcloud__Liabilities_Accrued__c - cgcloud__Payments_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liabilities (Unpaid)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>