force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Payments_Approved__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payments_Approved__c</fullName>
    <label>Claims (Approved)</label>
    <summarizedField>cgcloud__Payment_Tactic_Fund__c.cgcloud__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cgcloud__Payment_Tactic_Fund__c.cgcloud__Payment_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cgcloud__Payment_Tactic_Fund__c.cgcloud__Adjustment_Type__c</field>
        <operation>notEqual</operation>
        <value>Payment Reversal</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Payment_Tactic_Fund__c.cgcloud__Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>