force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Payments_Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payments_Total__c</fullName>
    <formula>cgcloud__Payments_Approved__c +  cgcloud__Payments_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claims (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>