force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Payouts_Approved__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payouts_Approved__c</fullName>
    <description>Sum of the Payments (Approved) amount plus the Invoice Based Costs amount.</description>
    <formula>cgcloud__Payments_Approved__c + cgcloud__Invoice_Based_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payouts (Approved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>