force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Pending_Balance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pending_Balance__c</fullName>
    <description>Represents the sum of the Credit/Debit Balance (Pending) amount plus the LE RBF amount</description>
    <formula>cgcloud__Total_Credits_Pending_Estimated__c  -  cgcloud__Total_Debits_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>