force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Pending_Budget__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pending_Budget__c</fullName>
    <description>Represents the sum of the Pending Balance amount plus the Remaining RBF amount</description>
    <formula>cgcloud__Pending_Balance__c  -  cgcloud__LE_Spend_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>