force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Product_Count__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Count__c</fullName>
    <description>usage in validation rule for 1 or more products in related list when locking the fund</description>
    <label>Product Count</label>
    <summaryForeignKey>cgcloud__Fund_Product__c.cgcloud__Fund__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>