force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__RBF_Based_Overdraw__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Based_Overdraw__c</fullName>
    <description>this field is to make calculation as follows: RBF (Remaining) * (RBF-Based Overdraw Allowance/ 100)</description>
    <label>RBF-Based Overdraw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>