force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Remaining_RBF__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Remaining_RBF__c</fullName>
    <formula>cgcloud__LE_RBF__c  -  cgcloud__Actual_RBF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining RBF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>