force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <formula>TEXT( cgcloud__Fund_Template__r.cgcloud__Sales_Org__c )</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>