force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Spending_Committed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Spending_Committed__c</fullName>
    <description>Sum of Tactic_Fund.LE_Spend__c of records whose Phase equals Committed minus the sum of Payment_Tactic_Funds.Payment_Status__c of records whose Payments_Status__c equals Closed.</description>
    <formula>cgcloud__LE_Spend_Approved__c - cgcloud__Payouts_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spending (Committed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>