force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>