force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Available_Overdraw__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Available_Overdraw__c</fullName>
    <description>this field is to make calculation as follows: Fixed-Based Overdraw + RBF-Based Overdraw</description>
    <formula>cgcloud__Fixed_Based_Overdraw__c  +  cgcloud__RBF_Based_Overdraw__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Available Overdraw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>