force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Balance__c</fullName>
    <formula>cgcloud__Current_Balance__c +  cgcloud__Pending_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>