force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Budget__c</fullName>
    <formula>cgcloud__Current_Budget__c +  cgcloud__Pending_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>