force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Credits_Approved_Earned__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Credits_Approved_Earned__c</fullName>
    <description>Represents the sum of the Deposits (Approved) amount plus the Actual RBF amount.</description>
    <formula>cgcloud__Deposits_Approved__c + cgcloud__Actual_RBF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits (Approved/Earned)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>