force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Credits_Pending_Estimated__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Credits_Pending_Estimated__c</fullName>
    <description>Represents the sum of the Deposits (Pending) amount plus the LE RBF amount</description>
    <formula>cgcloud__Deposits_Pending__c +  cgcloud__Remaining_RBF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits (Pending/Estimated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>