force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Debits_Approved__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Debits_Approved__c</fullName>
    <description>Represents the sum of the Withdraws/Payments (Approved) amount plus the Invoice Based Costs amount</description>
    <formula>cgcloud__Withdraws_Payments_Approved__c + cgcloud__Invoice_Based_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Debits (Approved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>