force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Total_Debits_Pending__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Debits_Pending__c</fullName>
    <description>Represents the sum of the Withdraws/Payments (Pending) amount plus the Invoice-Based Costs amount</description>
    <formula>cgcloud__Withdraws_Pending__c  +  cgcloud__Payments_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Debits (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>