force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>