force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>