force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Withdraws_Payments_Approved__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Withdraws_Payments_Approved__c</fullName>
    <description>Represents the sum of the Withdraws (Approved) amount plus the Payments (Approved) amount</description>
    <formula>cgcloud__Withdraws_Approved__c + cgcloud__Payments_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdraws/Claims (Approved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>