force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Withdraws_Pending__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Withdraws_Pending__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field rolls up pending fund transactions (where Target funds are debited ) and sums up Withdraws approved amount</description>
    <label>Withdraws (Pending)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>