force-app/main/default/objects/cgcloud__Fund__c/fields/cgcloud__Withdraws_Total__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Withdraws_Total__c</fullName>
    <formula>cgcloud__Withdraws_Approved__c  + cgcloud__Withdraws_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdraws (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>