force-app/main/default/objects/cgcloud__Fund__c/recordTypes/cgcloud__Customer.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer</fullName>
    <active>true</active>
    <description>Fund Record Type for Customer Anchor Type on Fund Template</description>
    <label>Customer</label>
</RecordType>