force-app/main/default/objects/cgcloud__Fund__c/recordTypes/cgcloud__Customer_Product.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Customer_Product</fullName>
    <active>true</active>
    <description>Fund Record Type mapping with Anchor Type Customer Product on Fund Template</description>
    <label>Customer Product</label>
</RecordType>