force-app/main/default/objects/cgcloud__Fund__c/validationRules/cgcloud__Cannot_Change_Status_from_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Cannot_Change_Status_from_Closed</fullName>
    <active>true</active>
    <description>Once the status has been changed to closed, it cannot be changed to any other status.</description>
    <errorConditionFormula>AND(
  $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
  ISPICKVAL(PRIORVALUE(cgcloud__Status__c), &apos;Closed&apos;),
  NOT(ISPICKVAL(cgcloud__Status__c, &apos;Closed&apos;))
)</errorConditionFormula>
    <errorMessage>Once set to Closed, the status cannot be changed again.</errorMessage>
</ValidationRule>