force-app/main/default/objects/cgcloud__Fund__c/validationRules/cgcloud__Cannot_Return_to_Initial_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Cannot_Return_to_Initial_Status</fullName>
    <active>true</active>
    <description>Prevents the user from setting the status back to Initial after it has been set to Active or beyond.</description>
    <errorConditionFormula>AND(
  $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
  ISPICKVAL(cgcloud__Status__c, &apos;Initial&apos;),
  ISPICKVAL(PRIORVALUE(cgcloud__Status__c), &apos;Active&apos;) ||
  ISPICKVAL(PRIORVALUE(cgcloud__Status__c), &apos;On Hold&apos;)
)</errorConditionFormula>
    <errorMessage>Cannot change Status back to Initial</errorMessage>
</ValidationRule>